--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "Van Carney <carney.van@gmail.com>",
   "name": "ezcake",
-  "description": "Cakefile Generator and Dependancy Manager",
+  "description": "Commandline Cakefile Generator",
   "version": "0.0.1",
   "licenses": [
     {
@@ -11,7 +11,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "github.com/webfreshener/ezcake.git"
+    "url": "github.com/vancarney/ezcake.git"
   },
   "files":["./templates"],
   "dependencies": {
