--- a/package.json
+++ b/package.json
@@ -10,19 +10,18 @@
       "url": "http://www.opensource.org/licenses/MIT"
     }
   ],
-  "files":["bin","templates"],
+  "files":["bin","data"],
   "dependencies": {
-    "async":"~0.2.8", 
-    "commander":"~1.1.1",
+    "coffee-script": "~1.7.1",
+    "async":"~0.2.8",
+    "fs-extra":"0.8.1",
+    "commander":"~2.1.0",
     "underscore": "~1.4.2",
-    "require_tree":"0.6.5",
-    "coffee-script": "~1.4.0",
-    "universal-jst": "~1.0.4",
-    "supervisor": "~0.5.0",
-    "commander":"~1.1.1",
+    "require_tree":"vancarney/require_tree",
     "which":"~1.0.5"
   },
   "devDependencies": {
+    "supervisor": "~0.5.0",
     "mocha": "~1.8.1",
     "chai": "~1.4.2",
     "docco": "~0.4.0"
