--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
   ],
   "files":["bin","data"],
   "dependencies": {
-    "coffee-script": "~1.7.1",
-    "async":"~0.2.8",
-    "fs-extra":"0.8.1",
-    "commander":"~2.1.0",
-    "underscore": "~1.4.2",
+    "coffee-script": ">=1.7.1",
+    "async":">=0.2.8",
+    "fs-extra":">=0.8.1",
+    "commander":">=2.1.0",
+    "underscore": ">1.4.2",
     "require_tree":"vancarney/require_tree",
-    "which":"~1.0.5"
+    "which":">=1.0.5"
   },
   "devDependencies": {
-    "supervisor": "~0.5.0",
-    "mocha": "~1.8.1",
-    "chai": "~1.4.2",
-    "docco": "~0.4.0"
+    "supervisor": ">=0.5.0",
+    "mocha": ">=1.8.1",
+    "chai": ">=1.4.2",
+    "docco": ">=0.4.0"
   },
   "homepage": "http://www.ezcakejs.com",
   "scripts": {
